# Project-Management-with-Beads-Skill

./: .gitignore  AGENTS.md  README.md
.github/workflows/: node-tests.yml  python-tests.yml
node/: cucumber.js  package-lock.json  package.json  test.js
node/features/: sync_inject.feature
node/features/step_definitions/: sync_inject.steps.js
node/features/support/: world.js
python/: README.md  pyproject.toml
python/agent_skills/: cli.py
python/agent_skills_beads.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python/features/: sync_inject.feature
python/features/steps/: sync_inject_steps.py
