[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-skills-beads"
version = "0.1.2"
description = "Beads project management skill CLI (sync/inject)"
authors = [{name = "Beads Maintainers"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-bdd>=7.1",
]

[project.scripts]
agent-skills = "agent_skills.cli:app"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.package-data]
"agent_skills" = ["data/skills/project-management-with-beads/SKILL.md"]

[tool.pytest.ini_options]
addopts = "-q"
python_files = ["test_*.py", "tests_*.py", "*_steps.py"]
testpaths = ["tests_cli.py", "features"]
markers = [
  "bdd: BDD feature scenarios",
]
